--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             <section class="section-01">
                 <div class="swiper-01">
                     <div class="item bg-01">
-                        <p class="tit">언제, <br>어디서나 함께 하는 <br>우리집 건강 주치의</p>
+                        <p class="tit">언제, <br>어디서나 함께하는 <br>우리집 건강 주치의</p>
                         <p class="sub">신개념 헬스케어 플랫폼 코나헬스</p>
                     </div>
                     <div class="item bg-02">
-                        <p class="tit">전문의가 <br>직접 설명해주는 <br>건강정보</p>
+                        <p class="tit">전문의가 <br>직접 설명해주는 <br>건강 정보</p>
                         <p class="sub">신개념 헬스케어 플랫폼 코나헬스</p>
                     </div>
                     <div class="item bg-03">
@@ -86,7 +86,7 @@
             <section class="section-03">
                 <p class="roudn-box-txt">AI헬스큐</p>
                 <p class="txt-01">내 손안의 의사 선생님 <br><strong>병원 가기 전에 <br>AI헬스큐에 물어보세요!</strong></p>
-                <p class="txt-02">코나헬스의 AI 솔루션과, 전문의 선생님들이 <br>직접 제작에 참여한 전문 의학 정보를 제공합니다.</p>
+                <p class="txt-02">코나헬스는 AI솔루션으로 확인된 질병에 대해서<br> 전문의 선생님들이 직접 참여한 의학 정보를 제공합니다.</p>
                 <div class="img-box">
                     <div class="img-box-inner">
                         <img src="img/img-mockup-01.png" alt="">
