--- a/board05.html
+++ b/board05.html
@@ -55,10 +55,10 @@
                             컨텐츠 영역입니다.
                         </div>
                         <div class="view-share">
-                            <span class="cmt-num">3</span>
+                            <span class="cmt-num">33333</span>
                             <div class="share-area">
                                 <!-- 좋아요 버튼 클릭시 on 클래스 추가 -->
-                                <a href="#none" class="cmt-heart on">게시글 좋아요<em>3</em></a>
+                                <a href="#none" class="cmt-heart on">게시글 좋아요<em>333</em></a>
                                 <!-- // 좋아요 버튼 클릭시 on 클래스 추가 -->
                                 <a href="#none" class="cmt-share btn-share">공유하기</a>
                             </div>
@@ -88,7 +88,7 @@
                                 <!-- 댓글달기 화면 활성화 active 클래스 추가 -->
                                 <div class="comment-view active">
                                     <div class="cmt-member">
-                                        <div class="input-text"><input type="text" name="" id="" placeholder="이름" value="코나헬스 관리자"></div>
+                                        <div class="input-text"><input type="text" name="" id="" placeholder="이름" value=""></div>
                                         <div class="input-text"><input type="password" name="" id="" placeholder="비밀번호"></div>
                                     </div>
                                     <div class="cmt-write">
@@ -118,7 +118,7 @@
         
                                 <div class="comment-view">
                                     <div class="cmt-member">
-                                        <div class="input-text"><input type="text" name="" id="" placeholder="이름" value="코나헬스 관리자"></div>
+                                        <div class="input-text"><input type="text" name="" id="" placeholder="이름" value=""></div>
                                         <div class="input-text"><input type="password" name="" id="" placeholder="비밀번호"></div>
                                     </div>
                                     <div class="cmt-write">
@@ -199,7 +199,6 @@
                         <button type="submit" class="btn bl">글쓰기</button>
                     </div>
                 </div>
-                
 
                 <div class="popup-close">
                     <a href="#none">닫기</a>
