--- a/board04.html
+++ b/board04.html
@@ -33,7 +33,7 @@
             <div class="inner">
                 <div class="board-head">
                     <p class="title">자유게시판</p>
-                    <a href="#none" class="btn-write">글쓰기</a>
+                    <!-- <a href="#none" class="btn-write">글쓰기</a>-->
                 </div>
 
                 <div class="board-cont">
@@ -77,16 +77,16 @@
                             </tr>
                         </tbody>
                     </table>
-
-                    <div class="btn-area">
-                        <button type="button" class="btn gr">취소</button>
-                        <button type="button" class="btn bl">작성</button>
-                    </div>
                 </div>
 
-                <div class="popup-close">
-                    <a href="#none">닫기</a>
+                <div class="btn-area">
+                    <button type="button" class="btn gr">취소</button>
+                    <button type="button" class="btn bl">작성</button>
                 </div>
+            </div>
+
+            <div class="popup-close">
+                <a href="#none">닫기</a>
             </div>
         </div>
         <!-- // 게시판 -->
